--- a/src/components/TourList/latest-news-list.css
+++ b/src/components/TourList/latest-news-list.css
@@ -12,18 +12,14 @@
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .latest-news__card {
   margin-top: 2rem;
-}
-
-.latest-news__card {
-  flex-basis: 100%;
+  flex-basis: 33.3333%;
+  min-width: 33.3333%;
   padding: 0.5rem;
-  -webkit-box-flex: 1;
-  flex-grow: 1;
 }
 
 @media screen and (min-width: 640px) {
