--- a/src/components/TourItem/style.css
+++ b/src/components/TourItem/style.css
@@ -21,6 +21,7 @@
 
 .content2 {
   margin-left: auto;
+  padding: 0px 5px;
 }
 
 .card-img-top {
@@ -28,6 +29,7 @@
 }
 
 .card-img-top h2 {
+  font-size: 30px;
   text-align: center;
   color: black;
   position: absolute;
@@ -36,5 +38,6 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 6px;
+
   margin: 0;
 }
