--- a/src/components/PostDetail/post-detail.css
+++ b/src/components/PostDetail/post-detail.css
@@ -5,7 +5,7 @@
   line-height: 1.33;
   color: #2d3748;
   font-weight: 900;
-  margin: 0px 0px 1rem;
+  margin: 0px 0px ;
 }
 
 @media screen and (min-width: 640px) {
